--- a/gb/25/7/6/n14545754.md
+++ b/gb/25/7/6/n14545754.md
@@ -36,14 +36,13 @@
 <p>资料更新时间：2025年7月6日晚上11时10分</p>
 <p>责任编辑：李玲</p>
 </div>
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543720.md#1">台风木恩生成 气象专家：续观察菲东热带扰动</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545086.md#1">台风丹娜丝逼近 台湾发海警 明后天影响最大</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545397.md#1">台风丹娜丝来袭 屏东海口祭延期</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545404.md#1">台风丹娜丝逼近 南水分署防汛准备就绪</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/24/n10082527.md#1" target="_blank">谢泳：叶企孙饶毓泰的死</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/14/4/12/n4130061.md#1" target="_blank">正清：法轮功没有“男女双修”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/27/n11142951.md#1" target="_blank">共产暴政录：中共鼓励外国残害海外华人</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/9/12/n9623089.md#1" target="_blank">坚持在卢森堡公园炼功 法国法轮功学员谈感受</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
